--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
 
             <nav class="flex space-x-8 text-lg font-medium font-mono">
             <a href="/" class="hover:text-blue-400 transition">Home</a>
-            <a href="/predict" class="hover:text-blue-400 transition">Predict</a>
+            <!-- <a href="/predict" class="hover:text-blue-400 transition">Predict</a> -->
             <a href="/about" class="hover:text-blue-400 transition">About</a>
             </nav>
         </div>
@@ -31,6 +31,7 @@
   <main class="text-center text-white p-10">
     <h2 class="text-4xl font-bold text-blue-500">Welcome to CardioPredict</h2>
     <p class="mt-4 text-gray-300">Your AI-powered heart stroke risk analyzer</p>
+    <button class="border border-gray-700 mt-4 rounded-lg px-4 hover:text-blue-400 transition"><a href="/get-started" class="text-2xl">Try Now</a></button>
   </main>
 </body>
 </html>
