--- a/templates/about.html
+++ b/templates/about.html
@@ -22,7 +22,7 @@
 
         <nav class="flex space-x-8 text-lg">
           <a href="/" class="hover:text-blue-400 transition">Home</a>
-          <a href="/predict" class="hover:text-blue-400 transition">Predict</a>
+          <!-- <a href="/predict" class="hover:text-blue-400 transition">Predict</a> -->
           <a href="/about" class="text-blue-400 font-semibold border-b-2 border-blue-400">About</a>
         </nav>
       </div>
