update: style and note

--- a/templates/about.html
+++ b/templates/about.html
@@ -5,12 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About | CardioPredict</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" href="{{ url_for('static', filename='images/favicon.png') }}" type="image/png">
 </head>
-<body
-  class="min-h-screen text-white bg-cover bg-center bg-no-repeat flex flex-col"
-  style="background-image: url('https://www.insideprecisionmedicine.com/wp-content/uploads/2019/01/1417-696x484.jpeg');"
->
-
+<body class="min-h-screen text-white bg-cover bg-center bg-no-repeat flex flex-col"
+style="background-image: url('https://www.insideprecisionmedicine.com/wp-content/uploads/2019/01/1417-696x484.jpeg');">
+  
   <!-- Navbar -->
   <header class="bg-white/10 backdrop-blur-md text-white shadow fixed top-0 left-0 right-0 z-30">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
