--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>CardioPredict</title>
   <script src="https://cdn.tailwindcss.com"></script>
+   <link rel="icon" href="{{ url_for('static', filename='images/favicon.png') }}" type="image/png">
 </head>
-<body class="min-h-screen bg-cover bg-center bg-no-repeat" style="background-image: url('https://www.insideprecisionmedicine.com/wp-content/uploads/2019/01/1417-696x484.jpeg');">
+<body class="min-h-screen bg-cover bg-center bg-no-repeat" >
+  <!-- Video -->
+  <video autoplay muted loop playsinline class="absolute inset-0 w-full h-full object-cover z-[-1]">
+    <source src="{{ url_for('static', filename='video/heartVideo.mp4') }}" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+
   <div class="bg-black bg-opacity-70 min-h-screen">
     <header class="bg-white/10 backdrop-blur-md text-white shadow">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -28,10 +35,10 @@
 
     <main class="flex flex-col items-center justify-center text-center text-white p-10 h-[calc(100vh-5rem)]">
       <h2 class="text-5xl font-bold text-blue-400 drop-shadow-md">Welcome to CardioPredict</h2>
-      <p class="mt-4 text-lg text-gray-200 max-w-xl">Your AI-powered heart stroke risk analyzer</p>
+      <p class="mt-4 text-lg max-w-xl text-blue-200">Your AI-powered heart stroke risk analyzer</p>
       <button class="mt-6 px-6 py-3 bg-blue-600 hover:bg-blue-700 text-white font-semibold rounded-xl shadow-lg transition">
         <a href="/get-started" class="inline-block text-white font-semibold  transition">
-          Click Me
+          Get Started
         </a>
       </button>
     </main>
