--- a/templates/trynow.html
+++ b/templates/trynow.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Try Now | CardioPredict</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" href="{{ url_for('static', filename='images/favicon.png') }}" type="image/png">
 </head>
 <body
   class="min-h-screen bg-cover bg-center bg-no-repeat font-mono"
@@ -24,7 +25,6 @@
           </div>
           <nav class="flex space-x-8 text-lg">
             <a href="/" class="hover:text-blue-400 transition">Home</a>
-            <!-- <a href="/predict" class="hover:text-blue-400 transition">Predict</a> -->
             <a href="/about" class="hover:text-blue-400 transition">About</a>
           </nav>
         </div>
@@ -44,6 +44,7 @@
           It considers medical factors like your age, BMI, glucose level, and lifestyle choices like smoking or physical activity.
           After you provide these inputs, our model instantly calculates your likelihood of having a potential heart stroke.
         </p>
+        <span class="text-red-400 text-sm mt-2">Note: This system is still under development, so predictions may not be fully accurate. Results can vary and should not be used for medical decisions.</span>
       </section>
 
       <section class="bg-neutral-900 bg-opacity-70 rounded-xl shadow-xl p-8 mb-10 backdrop-blur-sm">
