--- a/templates/about.html
+++ b/templates/about.html
@@ -7,32 +7,30 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" href="{{ url_for('static', filename='images/favicon.png') }}" type="image/png">
 </head>
-<body class="min-h-screen text-white bg-cover bg-center bg-no-repeat flex flex-col"
+<body class="relative min-h-screen bg-cover bg-center bg-no-repeat overflow-x-hidden"
 style="background-image: url('https://www.insideprecisionmedicine.com/wp-content/uploads/2019/01/1417-696x484.jpeg');">
   
   <!-- Navbar -->
-  <header class="bg-white/10 backdrop-blur-md text-white shadow fixed top-0 left-0 right-0 z-30">
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-      <div class="flex justify-between items-center h-20">
-        <div class="flex items-center">
-          <img src="{{ url_for('static', filename='images/heart.png') }}" alt="heart logo" class="w-12 h-12 rounded-full" />
-          <div class="ml-4">
-            <h1 class="text-2xl font-bold font-mono">CardioPredict</h1>
-            <p class="text-sm font-mono font-semibold">Know Before It Strikes</p>
+   <header class="bg-white/10 backdrop-blur-md text-white shadow rounded-full mx-6 mt-6">
+      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <div class="flex justify-between items-center h-20">
+          <div class="flex items-center">
+            <img src="{{ url_for('static', filename='images/heart.png') }}" alt="heart logo" class="w-12 h-12 rounded-full" />
+            <div class="ml-4">
+              <h1 class="text-2xl font-bold font-mono">CardioPredict</h1>
+              <p class="text-sm font-mono font-semibold">Know Before It Strikes</p>
+            </div>
           </div>
+          <nav class="flex space-x-8 text-xl font-medium font-mono">
+            <a href="/" class="hover:text-blue-400 transition">Home</a>
+            <a href="/about" class="hover:text-blue-400 transition">About</a>
+          </nav>
         </div>
-        <nav class="flex space-x-8 text-lg font-medium font-mono">
-          <a href="/" class="hover:text-blue-400 transition">Home</a>
-          <a href="/about" class="text-blue-400 font-semibold border-b-2 border-blue-400">About</a>
-        </nav>
       </div>
-    </div>
-  </header>
+    </header>
 
   <!-- About Content -->
-  <main
-    class="max-w-4xl mx-auto mt-32 px-6 py-12 bg-black bg-opacity-50 rounded-lg shadow-lg font-mono text-center"
-  >
+  <main class="max-w-4xl mx-auto mt-16 px-6 py-12 bg-black bg-opacity-50 rounded-lg shadow-lg font-mono text-center">
     <h2 class="text-4xl font-bold text-blue-500 mb-4">About CardioPredict</h2>
     <p class="text-gray-300 text-lg leading-relaxed max-w-3xl mx-auto">
       CardioPredict is an AI-powered web application designed to help users assess their risk of stroke based on health data inputs.
